# sts_agent

./: .gitignore  CLAUDE.md  justfile  pyproject.toml  run_data_collection_batch.py  run_hermes.py  run_llm.py  run_probe_bench.py  smoke_spread.py
src/sts_agent/: __init__.py  cli.py  logging_config.py  run.py  science.py  tracing.py
src/sts_agent/battle/: __init__.py  base.py  mcts.py  random_agent.py  tree_search.py
src/sts_agent/strategy/: __init__.py  base.py  evaluate_potions.py  llm_agent.py  map_routing.py  probe_data.py  shop_eval.py  sim_agent.py  simulate.py
tests/: conftest.py  test_act1_map.py  test_base_strategy_agent.py  test_cli.py  test_logging.py  test_logging_config.py  test_path_picking.py  test_strategy_agent.py
tests/battle/: test_mcts.py  test_random_agent.py  test_tree_search.py
tests/strategy/: test_shop_eval.py  test_sim_agent_shop.py  test_simulate.py
