[project]
name = "sts-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Juodagalvis", email = "julius.juodagalvis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sts-env",
]

[project.scripts]
sts-agent = "sts_agent:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
sts-env = { path = "../sts_env", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.3",
    "pytest-explicit>=1.0.1",
]

[tool.pytest.ini_options]
markers = ["slow: opt-in slow tests (run with --run-slow or --run-all)"]
explicit-only = ["slow"]
